	Fixed bug where WebKit/Blink browsers would scroll to the top of the editor when pasting into an empty element.
	Fixed bug where removing the editor would cause an error about wrong document on IE 11 under specific circumstances.
	Fixed bug where Gecko would place the caret at an incorrect location when using backspace.
	Fixed so pagebreak elements in the editor breaks pages when printing. Patch contributed by penc.
	Added support for highlighting the video icon when a video is added that produces an iframe. Patch contributed by monkeydiane.
Version 4.0.16 (2014-01-31)
	Fixed bug where the editor wouldn't be properly rendered on IE 10 depending on the document.readyState.
Version 4.0.15 (2014-01-31)
	Fixed bug where paste in inline mode would produce an exception if the contents was pasted inside non overflow element.
Version 4.0.14 (2014-01-30)
	Fixed a bug in the image plugin where images couldn't be inserted if the image_advtab option wasn't set to true.
Version 4.0.13 (2014-01-30)
	Added language selection menu to spellchecker button similar to the 3.x functionality. Patch contributed by threebytesfull.
	Added new style_formats_merge option that enables you to append to the default formats instead of replaceing them. Patch contributed by PacificMorrowind.
	Fixed bug where the DOMUtils getPos API function didn't properly handle the location of the root element. Patch contributed by Andrew Ozz.
	Fixed bug where the spellchecker wouldn't properly place the spellchecker suggestions menu. Patch contributed by Andrew Ozz.
	Fixed bug where the tabfocus plugin would prevent the user from suing Ctrl+Tab, Patch contributed by Andrew Ozz.
	Fixed bug where table resize handles could sometimes be added to elements out side the editable inline element.
	Fixed bug where the inline mode editor UI would render incorrectly when the stylesheets didn't finish loading on Chrome.
	Fixed bug where IE 8 would insert the image outside the editor unless it was focused first.